[project]
name = "overtimehourscalculation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "chinese-calendar==1.10.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "et-xmlfile==2.0.0",
    "flask==3.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "numpy==2.2.3",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "six==1.17.0",
    "tzdata==2025.1",
    "werkzeug==3.1.3",
    "xlrd==2.0.1",
]
